appId: com.lingvano.app
---
- launchApp:
    clearState: true
- tapOn: "I already have an account"
- tapOn: "Learn ASL"
- tapOn: "Continue"
- tapOn: "Email"
- inputText: "test@example.com"
- tapOn: "Password"
- inputText: "test"
- tapOn: "Login"
- tapOn: "Discover"
- assertVisible: "Let's get started!"
